update string on publishing pages

--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -40,7 +40,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<span class="help-block">{% trans %}All details can be changed before releasing.{% endtrans %}</span>
+						<span class="help-block">{% trans %}All settings can be changed before publishing.{% endtrans %}</span>
 						<button type="submit" class="btn btn-lg btn-success">{% trans "Create addon" %}</button>
 					</div>
 				</div>
