--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -8,13 +8,15 @@
 			<h1>{{title}}</h1>
 		</div>
 	</div>
-	<div class="container">
-		<h2>{% trans %}This is the publishing portal{% endtrans %}</h2>
-		<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
-		<p>
-			<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
-			<a href="{{base}}/login?returnto={{origpath}}" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
-		</p>
+	<div class="jumbotron">
+		<div class="container">
+			<h2>{% trans %}This is the publishing portal{% endtrans %}</h2>
+			<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
+			<p>
+				<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
+				<a href="{{base}}/login?returnto={{origpath}}" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
+			</p>
+		</div>
 	</div>
 </div>
 {% endblock %}
