--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,7 +3,10 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{title}}</h1>
+			{% if addons %}<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">{% endif %}
+			<h1>
+				{{title}}
+			</h1>
 		</div>
 	</div>
 	<div class="container">
