--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -39,8 +39,9 @@
 		</ul>
 		<div class="tab-content">
 			<div class="tab-pane active" id="release">
-				{% include 'functions/alert.twig' with {'selector' : 'version'} %}
-				<form role="form" method="post" action="{{filename}}">
+				<form role="form" method="post" action="{{filename}}#release">
+					{% include 'functions/alert.twig' with {'selector' : 'version'} %}
+					<input type="hidden" name="general-form">
 					<input type="hidden" name="state" value="{{state}}">
 					<div class="form-group">
 						<label for="title">{%trans "Addon" %}</label>
@@ -55,7 +56,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" name="general-submit">{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
@@ -137,19 +138,22 @@
 			</div>
 
 			<div class="tab-pane" id="changes">
-				<form role="form" method="post" action="{{filename}}">
+				<form role="form" method="post" action="{{filename}}#changes">
+					{% include 'functions/alert.twig' with {'selector' : 'changes'} %}
+					<input type="hidden" name="changes-form">
+					<input type="hidden" name="state" value="{{state}}">
 					<div class="form-group">
 						<div class="form-group">
-							<label for="new">{% trans "What's new?"%}</label>
-							<textarea class="form-control" id="new" name="new" rows="3" placeholder="{% trans %}Briefly explain why this release is better than the previous one.{% endtrans %}"></textarea>
+							<label for="whatsnew">{% trans "What's new?"%}</label>
+							<textarea class="form-control" id="whatsnew" name="whatsnew" rows="3" placeholder="{% trans %}Briefly explain why this release is better than the previous one.{% endtrans %}" maxlength="512">{{whatsnew}}</textarea>
 						</div>
 						<div class="form-group">
 							<label for="changelog">{% trans "Detailed changelog" %}</label>
-							<textarea class="form-control monospace" id="changelog" name="changelog" rows="8" placeholder="+ Added a new feature..."></textarea>
+							<textarea class="form-control monospace" id="changelog" name="changelog" rows="6" placeholder="+ Added a new feature..." maxlength="65536">{{changelog}}</textarea>
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" disabled>{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
