--- a/app/templates/site/privacy.twig
+++ b/app/templates/site/privacy.twig
@@ -9,18 +9,18 @@
 		</div>
 	</div>
 	<div class="container">
-		<p><strong>{% trans %}All data, apart from files you upload, are kept on Lorry servers and backup systems and are not passed on to any third party.{% endtrans %}</strong></p>
-		<p>{% trans %}Files you upload may be transfered to a content delivery network to make them publicly available. You are responsible for files you upload.{% endtrans %}</p>
+		<p><strong>{% trans %}All data is kept exclusivly under our and our hosters control and not passed on to any other third party.{% endtrans %}</strong></p>
+		<p>{% trans %}Files you upload may be transferred to a content delivery network to make them publicly available. You are responsible for files you upload.{% endtrans %}</p>
 		<h2>{% trans %}User data{% endtrans %}</h2>
 		<p>{% trans %}We save the following data directly related to your account:{% endtrans %}</p>
 		<ul>
-			<li>{% trans %}<strong>Basic account information</strong> (username, email address, encrypted password, language, verification status){% endtrans %}</li>
-			<li>{% trans %}<strong>Login services</strong> which you linked to your account{% endtrans %}</li>
-			<li>{% trans %}<strong>Profil information</strong> (when you registered, what you set up on the settings page){% endtrans %}</li>
+			<li>{% trans %}<strong>Basic account information</strong> (only username, email address and encrypted password){% endtrans %}</li>	
+			<li>{% trans %}<strong>Settings and profile information</strong> (for example: language, when you registered, and details you submitted on the settings page){% endtrans %}</li>	
+			<li>{% trans %}<strong>Login services</strong> (only if you added a linked account){% endtrans %}</li>
 		</ul>
 		<p>{% trans %}The following data is saved as linked to your account, but cannot be correlated once you delete your account:{% endtrans %}</p>
 		<ul>
-			<li>{% trans %}<strong>Addons</strong> and <strong>releases</strong> you created and any files you uploaded{% endtrans %}</li>
+			<li>{% trans %}<strong>Addons</strong> and <strong>releases</strong> you created (and the corresponding files you uploaded){% endtrans %}</li>
 		</ul>
 		<h2>{% trans %}Transparency{% endtrans %}</h2>
 		<p>{% trans %}Lorrys source code is public, so you can check all of this yourself. If you have further questions concerning your privacy, please do not hesitate to contact us.{% endtrans %}<p>
