changed "in development" line on front page

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -63,7 +63,7 @@
 		{% endif %}
 			<hr>
 			<h2>{% trans %}In development{% endtrans %}</h2>
-			<p class="text-big">{% trans %}The Lorry platform is actively beeing developed. You can join and try out the features, but we might reset the accounts at some point.{% endtrans %}</p>
+			<p class="text-big">{% trans %}The Lorry platform is actively beeing developed. You can join and try out what works so far, and we will continue to add features.{% endtrans %}</p>
 			<a href="{{base}}/about" class="btn btn-info">{% trans %}About Lorry{% endtrans %}</a>
 			<a href="https://clonkspot.org/forum/topic_show.pl?tid=30" class="btn btn-default">{% trans %}Lorry on Clonkspot{% endtrans %}</a>
 		</div>
