--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -55,12 +55,7 @@
 			<div class="col-md-8">
 				<hr class="visible-xs">
 				<h2>{% trans %}Welcome back!{% endtrans %}</h2>
-				<p class="lead">{% trans %}Nice to see you again. Have you visited these other great Clonk sites yet?{% endtrans %}</p>
-				<ul class="list-inline">
-					<li><a href="http://openclonk.org">openclonk.org</a></li>
-					<li><a href="https://clonkspot.org">Clonkspot</a></li>
-					<li><a href="http://clonkforge.net">Clonk Forge</a></li>
-				</ul>
+				<p class="lead">{% trans %}Nice to see you again. {% endtrans %}</p>
 				<hr>
 				<h3>{% trans %}No account yet?{% endtrans %}</h3>
 				<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
