update "About clonk" page

--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -6,14 +6,14 @@
 	<div class="page-header">
 		<div class="container">
 			<h1>{{title}}</h1>
-			<p class="lead">{% trans %}Clonk is a unique 2.5-dimensional game and often referred to as a mix of "The Settlers" and "Lemmings".{% endtrans %}</p>
+			<p class="lead">{% trans %}Clonk is a unique two-dimensional game and often referred to as a mix of "The Settlers" and "Lemmings".{% endtrans %}</p>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
+				<h2><img src="{{resources}}/custom/game/rage.png" height="80"></h2>
 				<h3>{% trans %}Clonk Rage{% endtrans %}</h3>
-				<p><img src="{{resources}}/custom/game/rage.png"></p>
 				<p>{% trans %}The classic game with hundreds of community-built, high-quality addons. Magical wars, strategic shooters and futuristic settling: Clonk Rage has it all.{% endtrans %}</p>
 				<p>{% trans %}Often the sheer selection is overwelming, so be sure to spread the word and vote for the addons you like.{% endtrans %}</p>
 				<p>
@@ -22,8 +22,8 @@
 				</p>
 			</div>
 			<div class="col-md-4">
+				<h2><img src="{{resources}}/custom/game/openclonk.png" height="80"></h2>
 				<h3>{% trans %}OpenClonk{% endtrans %}</h3>
-				<p><img src="{{resources}}/custom/game/openclonk.png"></p>
 				<p>{% trans %}The opensource successor to the Clonk series, built by players and developers of the previous Clonk titles.{% endtrans %}</p>
 				<p>{% trans %}Although the addon selection is still limited, OpenClonk completely reimaginges a great part of the game and greatly refines the technology, now supporting three-dimensional models within the game.{% endtrans %}</p>
 				<p>
@@ -32,6 +32,7 @@
 				</p>
 			</div>
 			<div class="col-md-4">
+				<p class="visible-lg visible-md" style="height: 80px; margin: 20px 0;"></p>
 				<h3>{% trans %}&hellip;only just the beginning{% endtrans %}</h3>
 				<p>{% trans %}Clonk lives from its fans, with dedicated players creating high-quality addons.{% endtrans %}</p>
 				<p>{% trans %}The series appeals to all ages alike and has been around for many years. Addons exist in a huge variety of gameplay and genre, and Lorry offers a central platform for the best of them.{% endtrans %}</p>
